@@ -1,1 +1,2 @@
 DIST ovirt-shell-3.3.0.1.tar.gz 60715 SHA256 77ce8f78f9ae858a736d9a086479cd9d74450ff4a2c381762dad662176ad1598 SHA512 f4ab9af76b493541fd38820f8aaa6c33d1a189f8f6b7d9cdaa2fa9fc6debf2033e987a862f6f5f51df6cbbbf25c3f2be3c19fb4732600fcec7b69264f02793c9 WHIRLPOOL 87f8b5a61eb2a0f727b0895560c6029f0ef1410ea2452ab3372c69585f7296c1ebee15be901142022e629d24f77cf7a14d4351faa98a3eb9c56ef4bf91898f98
+DIST ovirt-shell-3.3.0.2.tar.gz 61191 SHA256 b8138e36ebff3cf686d4e8bd7d360e2a61bef7b8c26da2bbc86dab72873f941f SHA512 dbd391357d5ef1f77bd77c2820209d4aef18351f5541fc86de585bcb98bea7098ab9b0e3dd3a50a6048d6565f6827ac0e653026ef7acddd93e1df02efca686a2 WHIRLPOOL a2df777766a01950a492b78f0d8d7e93db7fa932075a0b580673c403f3bc0fa99456f955987e05a37f859df9add6b604f91069f514c1640a7a9528aa43d28ee6
