@@ -1,3 +1,8 @@
+*ovirt-shell-3.3.0.2 (06 May 2013)
+
+  06 May 2013;  <ekohl@gentoo.org> +ovirt-shell-3.3.0.2.ebuild:
+  Bump app-misc/ovirt-shell
+
 *ovirt-shell-3.3.0.1 (04 Apr 2013)
 
   04 Apr 2013; Ewoud kohl van Wijngaarden <ekohl@gentoo.org> +metadata.xml,
